--- a/configs/experiment/slotae_3dshapes_shape2ohue.yaml
+++ b/configs/experiment/slotae_3dshapes_shape2ohue.yaml
@@ -25,12 +25,13 @@ dataset:
   split_variant: shape2ohue
 
 model:
-  optimizer:
-    lr: 0.0004
+  training:
+    optimizer:
+      lr: 0.0004
 
 trainer:
   min_epochs: 1
-  max_epochs: 20
+  max_epochs: 50
   gradient_clip_val: 1.0
 
 callbacks:
