--- a/configs/model/compnet.yaml
+++ b/configs/model/compnet.yaml
@@ -1,7 +1,7 @@
 defaults:
   - /loss@recons_loss: recons_mse
   - /loss@latent_loss: wasserstein_mmd
-  - /optimizer: adam
+  - /training: default
   - _self_
 
 _target_: src.model.compnet.CompositionNet
