--- a/configs/model/wae.yaml
+++ b/configs/model/wae.yaml
@@ -2,7 +2,7 @@ defaults:
   - base_lgm
   - /loss@recons_loss: recons_mse
   - /loss@latent_loss: wasserstein_mmd
-  - /optimizer: adam
+  - /training: default
   - _self_
 
 _target_: src.model.autoencoder.VariationalAutoEncoder
