--- a/configs/experiment/slotae_mpi3d_baseline.yaml
+++ b/configs/experiment/slotae_mpi3d_baseline.yaml
@@ -23,8 +23,9 @@ dataset:
   split_sizes: [0.9, 0.05, 0.05]
 
 model:
-  optimizer:
-    lr: 0.0004
+  training:
+    optimizer:
+      lr: 0.0004
 
 trainer:
   min_epochs: 1
