--- a/configs/experiment/vae_dsprites_baseline.yaml
+++ b/configs/experiment/vae_dsprites_baseline.yaml
@@ -23,9 +23,10 @@ dataset:
   split_sizes: [0.9, 0.05, 0.05]
 
 model:
-  optimizer:
-    lr: 0.0001
-    weight_decay: 0.0
+  training:
+    optimizer:
+      lr: 0.0001
+      weight_decay: 0.0
 
 trainer:
   min_epochs: 1
