--- a/configs/experiment/vae_dsprites_shape2px.yaml
+++ b/configs/experiment/vae_dsprites_shape2px.yaml
@@ -26,9 +26,10 @@ dataset:
   split_variant: sqr2tx
 
 model:
-  optimizer:
-    lr: 0.0001
-    weight_decay: 0.0
+  training:
+    optimizer:
+      lr: 0.0001
+      weight_decay: 0.0
 
 trainer:
   min_epochs: 1
