--- a/configs/model/compnet_vae.yaml
+++ b/configs/model/compnet_vae.yaml
@@ -2,7 +2,7 @@ defaults:
   - base_lgm
   - /loss@recons_loss: recons_bce
   - /loss@latent_loss: gaussian_kl
-  - /optimizer: adam
+  - /training: default
   - _self_
 
 _target_: src.model.compnet.CompositionNet
