--- a/configs/model/slate.yaml
+++ b/configs/model/slate.yaml
@@ -1,7 +1,8 @@
 defaults:
   - /loss: recons_mse
-  - /optimizer: adam
-  - /scheduler: exponential_lr
+  - /training: default
+  - /training@training.schedulers.exponential: exponential
+  - /training@training.schedulers.warmup: warmup
   - _self_
 
 _target_: src.model.slate.SLATE
@@ -120,6 +121,15 @@ patch_decoder:
     - [pixel_shuffle, [2]]
     - [conv, ["${model.patch_encoder.input_size.0}", 1, 1, 0]]
 
+training:
+  optimizer:
+    lr: 0.0003
+
+  schedulers:
+    exponential:
+      gamma: 0.999993069  # 0.5 ** (1 / 100000)
+
+  scheduling_metric: "val/token_xent"
 
 # Autoregressive reconstruction is super slow.
 _ar_val_batches: 1
