Add support for torch.compile.

--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,6 +4,7 @@ defaults:
   - _self_  # override defaults
   - dataset: null
   - model: null
+  - compile: default
   - callbacks: dafault
   - logger: tensorboard
   - trainer: dafault
