--- a/configs/experiment/fgseg_pentomino_new_shape.yaml
+++ b/configs/experiment/fgseg_pentomino_new_shape.yaml
@@ -10,7 +10,7 @@ defaults:
 # Tags format is 'training_regime', 'dataset', 'model', 'condition'
 # This information is used by Hydra to create the run folder
 # See configs/hydra/default.yaml
-tags: ["unsupervised", "pentominos", "fgseg", "shape_and_rotation"]
+tags: ["unsupervised", "pentominos", "fgseg", "new_shape"]
 
 seed: null
 
@@ -18,8 +18,8 @@ test: True
 
 dataset:
   split_sizes: [0.95, 0.05]
-  split_condition: combgen
-  split_variant: shape_and_rotation
+  split_condition: extrap
+  split_variant: new_shape
   split_modifiers: [remove_redundant_rotations]
   rebalance_wrt_factor: shape
 
