--- a/configs/analysis/slot_representation.yaml
+++ b/configs/analysis/slot_representation.yaml
@@ -7,24 +7,16 @@ metrics: null
 
 visualizations:
   slot_latent_rep:
-
-    _target_: bin.extra.visualization.SlotRepresentation
+    _target_: bin.extra.visualization.PerceptualGroupingLatentProjection
     name: "tsne-df=0.5.png"
     subsample: 100
     simultaneous_projection: True
+    factor_dim: 0
+    comparison_factor_1: 0
+    comparison_factor_2: 3
     dimensionality_reduction:
       _target_: sklearn.cross_decomposition.PLSCanonical
       n_components: 6
       algorithm: svd
       max_iter: 100000
       tol: 1e-6
-    #   _target_: src.analysis.tsne.FItSNE
-    #   no_dims : 2
-    #   perplexity_list: [30.0, 250.0]
-    #   fft_not_bh: True
-    #   df: 0.5
-    #   max_iter: 1000
-    #   early_exag_coeff: 2500
-    #   stop_early_exag_iter: 500
-    #   start_late_exag_iter: 501
-    #   late_exag_coeff: 2500
